# Smartcom_test_backend

./: .gitignore  Smartcom_test.sql  pyproject.toml  Тестовое - бэк.docx
src/query_typing/: app.py  model.py  model_base.py
