[tool.poetry]
name = "query_typing"
version = "0.1.0"
description = ""
authors = ["Maxim Andryunin <maxim.andryunin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.991"
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
